
  * Lwt_seq: a Seq-like data-structure with Lwt delayed nodes (#836, #842, Zach Shipko).

  * Lwt_unix.auto_pause: the replacement of Lwt_unix.auto_yield that uses Lwt.pause instead of Lwt_unix.yield (#855, #858, Favonia).

  * Lwt_stream.return, Lwt_stream.return_lwt: singleton stream constructors (#864, Boning Dong).

====== Misc ======

  * Code quality improvement: remove an uneeded Obj.magic (#844, Benoit Montagu).


===== 5.4.2 =====

====== Bugs fixed ======

  * Fix compilation on Windows by providing missing dummy stubs (#868, Andreas Hauptmann, Antonin Décimo).


===== 5.4.1 =====

====== Bugs fixed ======

  * Fix Lwt_fmt.stderr to actually point to stderr (#852, #850, Volker Diels-Grabsch).

  * Make temporary files created by Lwt_io.with_temp_dir deletable on Windows by removing the RO bit (#849, #861, Antonin Décimo).

  * Handle ECONNABORTED in Lwt_io.establish_server* (#829, #830, Reynir Björnsson, Hannes Mehnert).



====== Bugfixes ======

  * Fix Lwt_fmt.stderr to actually point to stderr (#852, #850, Volker Diels-Grabsch).

  * Lwt_io.establish_server* handles ECONNABORTED (#829, #830, Reynir Björnsson)


===== 5.4.0 (2020-12-16) =====

====== Installability ======

  * Support for OCaml 4.12 (#804, #826, Kate Deplaix).

  * lwt_ppx now uses ppxlib. This introduce a transitive dependency to OCaml.4.04 (#807, Philippe Veber).

====== Bugfixes ======

  * Catch exceptions in Lwt_react.of_stream (#809, Petter A. Urkedal).

  * Avoid segfaults in Lwt_unix.tcsetattr (#798, Frédéric Fortier).

====== Additions ======

  * fork method in Lwt_engine. This method is a noop in the released engines but it paves the way to a libuv-based engine (#811, Ulrik Strid, Anton Bachin).

  * Lwt_main.abandon_yielded_and_paused for use in conjunction with Lwt.fork (#789, Julien Tesson).

  * Lwt.wrap_in_cancelable to complete protect and no_cancel (#785).

  * Support for IOV_MAX in [Lwt_unix.IO_vectors.system_limit (#801, Pino Toscano).
